- Routes are matched using METHOD as well as PATH
- Documentation updated
- Terminating a bgworker process is now done by pg_cancel_backend instead of pg_terminate_backend
- Added implicit cast from JSONB to TEXT[]

1.1.1
Security fixes:
- Do not exclude session check when session is not set
- Do not expose user_id in generated session ID
- Removed grape.set_password_with_service_ticket
- Downloads are now also protected behind authentication
- Save Session ID in cookies

New features:
- Added functions: grape.current_session_id and grape.current_username

1.1.2
- Support for remote users
- New function grape.user_id_from_email
- Correctly store headers
- Fixed issues regarding paths when loading of config files
- Fix bug relating to validation on GET 
- Grape can n

1.1.3
Major changes:
- Change to IPC Connectivity between workers, instead of using a FIFO
- Settings from DB is now available in grape app, and in API calls via app.get('grape_settings')
- Check DB connection before spawning workers
- Grape will now refuse to start if the DB version does not match the version in package.json
- Each process has it's own logfile now, and each day has it's own directory
- The resolving of resources are now modular
- Permission checks on API calls has been moved to Node
- Session validation checks are now cached properly

- "admin" role can no longer do anything automatically

- Many improvements to logger

Minor changes:
- Do not restart worker process after fatal error
- Renamed config setting "instances" to "http_instance_count"
- New config option "listen"
- Add new config setting "db_idle_timeout"
- grape-manage will now read from config/grape_manage.json
- Usernames of sessions are logged in logfiles

Deprecated features:
- JS API calls (add "old_style_js_api_calls" to your project's config to enable it)

Removed features:
- Removed API call /session/list/:date
- Email functionality has been moved to it's own repository, grape-email-sender
- Removed /api_list
